--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-native-library",
   "version": "0.0.1",
   "private": true,
+  "main": "src/index.js",
   "scripts": {
     "start": "react-native start",
     "test": "jest",
