--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.0",
     "react": "16.8.6",
     "react-native": "0.60.5",
+    "react-native-floating-labels": "^1.1.9",
     "react-native-material-textfield": "^0.12.0",
     "react-native-vector-icons": "^6.6.0"
   },
